# arangodb

./: .gitmodules  CMakeLists.txt
Documentation/DocuBlocks/Rest/Views/: REST_VIEW_CREATE.md  REST_VIEW_DELETE.md  REST_VIEW_LINK_CREATE.md  REST_VIEW_READ.md  REST_VIEW_READ_ALL.md  REST_VIEW_REPLACE.md  REST_VIEW_UPDATE.md
UnitTests/: CMakeLists.txt
UnitTests/Cache/: FrequencyBuffer.cpp  Manager.cpp  Metadata.cpp  MockScheduler.cpp  MockScheduler.h  PlainBucket.cpp  PlainCache.cpp  TransactionalBucket.cpp
UnitTests/IResearch/: IResearchDocument-test.cpp  IResearchLinkMeta-test.cpp  IResearchViewMeta-test.cpp  Runner.cpp  VelocyPackHelper-test.cpp
arangod/: CMakeLists.txt
arangod/Cache/: Cache.cpp  Cache.h  CachedValue.cpp  CachedValue.h  FrequencyBuffer.h  Manager.cpp  Manager.h  ManagerTasks.cpp  ManagerTasks.h  Metadata.cpp  Metadata.h  PlainBucket.cpp  PlainBucket.h  PlainCache.cpp  PlainCache.h  State.cpp  State.h  TransactionalBucket.cpp  TransactionalBucket.h  TransactionalCache.cpp  TransactionalCache.h
arangod/IResearch/: Containers.cpp  Containers.h  Containers.hpp  IResearchDocument.cpp  IResearchDocument.h  IResearchFeature.cpp  IResearchFeature.h  IResearchFieldIterator.cpp  IResearchFieldIterator.h  IResearchLink.cpp  IResearchLink.h  IResearchLinkMeta.cpp  IResearchLinkMeta.h  IResearchView.cpp  IResearchView.h  IResearchViewMeta.cpp  IResearchViewMeta.h  RestIResearchViewHandler.cpp  RestIResearchViewHandler.h  RestViewHandler.cpp  RestViewHandler.h  VelocyPackHelper.cpp  VelocyPackHelper.h  ViewFeature.cpp  ViewFeature.h
arangod/Indexes/: Index.cpp  Index.h
arangod/MMFiles/: MMFilesIndexFactory.cpp
arangod/RestServer/: arangod.cpp
cmake/: FindICU.cmake  FindIResearch.cmake  FindOpenSSL.cmake
js/apps/system/_admin/aardvark/APP/: api-docs.json
js/apps/system/_api/foxx/APP/: index.js
js/server/modules/@arangodb/foxx/: service.js
lib/V8/: v8-utils.cpp
tests/: CMakeLists.txt
tests/IResearch/: Containers-test.cpp  IResearchDocument-test.cpp  IResearchFilter-test.cpp  IResearchLink-test.cpp  IResearchLinkMeta-test.cpp  IResearchView-test.cpp  IResearchViewMeta-test.cpp  StorageEngineMock.cpp  VelocyPackHelper-test.cpp
